<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1.2"
    android:padding="10dp">
    <ImageView
        android:id="@+id/tv_weather_icon"
        android:layout_weight="0.2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:src="@drawable/art_clear"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_weight="0.6"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="@string/day"/>
        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/weather"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.4"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            tools:text="@string/max_temp"/>
        <TextView
            android:id="@+id/tv_min_temp"
            android:gravity="end"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            tools:text="@string/min_temp"/>
    </LinearLayout>
</LinearLayout>