<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0"
    tools:context="com.example.satyakresna.sunshineiak.DetailActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.45"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/tv_day_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:text="@string/day"
            android:textColor="#000000"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:baselineAligned="false">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_weather_icon_today"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center_horizontal"
                    tools:src="@drawable/art_clear"/>
                <TextView
                    android:id="@+id/tv_weather_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    tools:text="@string/weather"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_max_temp_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:textSize="72sp"
                    android:textColor="#000000"
                    tools:text="@string/max_temp"/>
                <TextView
                    android:id="@+id/tv_min_temp_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:textSize="36sp"
                    android:textColor="#000000"
                    tools:text="@string/min_temp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.55"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#455A64"
        android:paddingLeft="32sp"
        android:paddingStart="32sp"
        android:paddingEnd="32sp"
        android:weightSum="0.9">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0">
            <TextView
                android:text="@string/humidity_label"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="#90A4AE"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/tv_humidity_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:textColor="#ffffff"
                android:textSize="28sp"
                tools:text="@string/humidity_value"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0">
            <TextView
                android:text="@string/pressure_label"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="#90A4AE"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/tv_pressure_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:textColor="#ffffff"
                android:textSize="28sp"
                tools:text="@string/pressure_value"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0">
            <TextView
                android:text="@string/wind_label"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="#90A4AE"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/tv_wind_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:textColor="#ffffff"
                android:textSize="28sp"
                tools:text="@string/wind_value"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>