<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp"
    android:background="@drawable/today_touch_selector">
    <TextView
        android:id="@+id/tv_day_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#ffffff"
        android:textSize="20sp"
        tools:text="@string/today"/>
    <LinearLayout
        android:baselineAligned="false"
        android:weightSum="1.0"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_weather_icon_today"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                tools:background="@drawable/art_clear"/>
            <TextView
                android:id="@+id/tv_weather_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="18sp"
                tools:text="@string/weather" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_max_temp_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:textColor="#ffffff"
                android:textSize="36sp"
                tools:text="@string/max_temp"/>
            <TextView
                android:id="@+id/tv_min_temp_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:textColor="#ffffff"
                android:textSize="36sp"
                tools:text="@string/min_temp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>